2007-05-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.addin.xml, MonoDevelop.GtkCore.mdp, Makefile.am,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderPalettePad.cs: Removed old
	  palette pad.
	* MonoDevelop.GtkCore/GtkCoreService.cs: Set the 'internal' flag for
	  widgets implemented by private classes.
	* lib/libsteticui.dll, lib/libstetic.dll: Updated from svn module.
	  Fixes bugs #80875, #81261, #81365.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: If the project
	  is a library, add itself as an internal widget library, so widgets
	  with internal visibility will be shown.
	* MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs: When saving a window,
	  use the visibility of the class to set the visibility of the
	  component. Together with all changes done in stetic, fixes bug
	  #80875.

2007-05-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.NodeBuilders/WidgetNodeBuilder.cs,
	  MonoDevelop.GtkCore.NodeBuilders/WindowsFolderNodeBuilder.cs,
	  MonoDevelop.GtkCore.NodeBuilders/ActionGroupNodeBuilder.cs,
	  MonoDevelop.GtkCore/GtkDesignInfo.cs,
	  MonoDevelop.GtkCore/WidgetFileDescriptionTemplate.cs,
	  MonoDevelop.GtkCore.Dialogs/ConfirmWindowDeleteDialog.cs,
	  MonoDevelop.GtkCore.GuiBuilder/ActionGroupDisplayBinding.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderWindow.cs,
	  MonoDevelop.GtkCore.GuiBuilder/ActionGroupView.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs,
	  MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs: Track api changes in
	  Stetic.
	* MonoDevelop.GtkCore.Dialogs/WidgetBuilderOptionPanel.cs: Delay
	  library updating until really necessary.
	* lib/libsteticui.dll, lib/libstetic.dll: Updated from stetic module.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.mdp: Copy the .addins.xml file to the output dir.
